@@ -1,23 +1,18 @@
 package com.example.eCommerce.entity;
 
-import java.time.LocalDateTime;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.UUID;
-
-import org.jspecify.annotations.Nullable;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
+import com.example.eCommerce.enums.Role;
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+
+import java.time.LocalDateTime;
+import java.util.Collection;
+import java.util.List;
+import java.util.UUID;
 
 @Entity
 @Table(name = "users")
@@ -25,6 +20,7 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 @AllArgsConstructor
 public class User implements UserDetails {
+
     @Id
     @GeneratedValue(strategy = GenerationType.UUID)
     private UUID id;
@@ -35,37 +31,50 @@ public class User implements UserDetails {
     private String email;
 
     private String password;
-    private LocalDateTime time;
-    
+
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private Role role = Role.ROLE_CUSTOMER;
+
+    private boolean isVerified = false; 
+
+    private String verificationCode;
+
+    private String passwordResetToken;
+
+    private LocalDateTime passwordResetExpiry;
+
+    private String refreshToken; 
+
+    private LocalDateTime createdAt = LocalDateTime.now();
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
-    @Override
-    public @Nullable String getPassword() {
-        return password;
-    }
+
     @Override
     public String getUsername() {
         return email;
     }
-   
-    
+
+    @Override
+    public boolean isEnabled() {
+        return isVerified; 
+    }
+
     @Override
     public boolean isAccountNonExpired() {
         return true;
     }
+
     @Override
     public boolean isAccountNonLocked() {
         return true;
     }
+
     @Override
     public boolean isCredentialsNonExpired() {
         return true;
     }
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
-
 }
